[project]
name = "gogma-reroll-tracker"
version = "0.1.0"
description = "Tracker for Monster Hunter Wilds Gogma Great Sword rerolls"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "python-lucide"
]

[project.scripts]
gogma-tracker = "gogma_tracker.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gogma_tracker"]