[tool.poetry]
name = "gogma-reroll-tracker"
version = "0.1.0"
description = "Tracker for Monster Hunter Wilds Gogma Great Sword rerolls"
authors = ["reginmaru@gmail.com"]
packages = [{ include = "gogma_tracker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.38.0"
pandas = ">=2.2.0"
python-lucide = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
